--- a/redux-counter/package.json
+++ b/redux-counter/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "add": "^2.0.6",
+    "classname": "^0.0.0",
+    "node-sass": "^4.10.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.1.1",
     "react-scripts": "1.1.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "sass-loader": "^7.1.0",
+    "yarn": "^1.12.3"
   },
   "scripts": {
     "start": "react-scripts start",
