--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classname": "^0.0.0",
     "classnames": "^2.2.6",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
@@ -27,8 +28,9 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "immutable": "^4.0.0-rc.12",
     "jest": "20.0.4",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "object-assign": "4.1.1",
     "open-color": "^1.6.3",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -38,6 +40,9 @@
     "react": "^16.5.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
